.helm/templates/grading-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grading-api
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: grading-api
